# support-call-generator

./: .env.example  .gitignore  AGENTS.md  Evolving support call_generator.md  HANDOFF_REALTIME_REVIEW.md  README.md  REALTIME_EXPORT_README.md  REALTIME_FEEDBACK.md  SCENARIO_COVERAGE.md  SKILL.md  app.py  pyproject.toml
samples/: README.md
samples/eval_pack/: manifest.json  review_index.csv
samples/eval_pack/ground_truth/: call_0b5e3c1d05.expected_timeline.json  call_0b5e3c1d05.ground_truth.json  call_0b5e3c1d05.leakage_report.json  call_499e1ba765.expected_timeline.json  call_499e1ba765.ground_truth.json
samples/eval_pack/metadata/: call_0b5e3c1d05.consumer_summary.json  call_0b5e3c1d05.exposure_marker.json  call_499e1ba765.consumer_summary.json  call_499e1ba765.exposure_marker.json
samples/eval_pack/transcripts/: call_0b5e3c1d05.json  call_0b5e3c1d05.md  call_499e1ba765.json  call_499e1ba765.md
samples/process_fixture/: process_fixture_envelope.json
samples/process_fixture/process_fixture/: call_0b087eebe6.json  call_d0788fccd5.json
samples/review_pack/: manifest.json  review_index.csv
samples/review_pack/transcripts/: call_41879c016e.json  (+3 more)
samples/transcripts_only/: manifest.json  review_index.csv
support_call_generator/: __init__.py  __main__.py  cli.py  context.py  doctrines.py  expected_state.py  export_realtime.py  exporter.py  fallback.py  generator.py  handoff.py  leakage.py  llm.py  metadata.py  models.py  profiles.py  render.py  report.py  scenarios.py  storage.py  tags.py  validator.py
tests/: test_generator.py  test_realtime_support.py
(+8 files in other folders)
