[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "support-call-generator"
version = "0.1.0"
description = "Synthetic B2B SaaS support-call generator with hidden ground truth."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
ui = ["streamlit>=1.35.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["support_call_generator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
